# ServerApplication

./: .gitignore  CMakeLists.txt
node_client/: app.js
src/Client/: client.cpp
src/Client/pages/: index.html  main.js  room.html
src/Server/: HttpRequest.hpp  HttpResponse.hpp  acceptor.cpp  acceptor.hpp  asyncInputStream.cpp  asyncInputStream.hpp  asyncOutputStream.cpp  asyncOutputStream.hpp  client.hpp  connectionProcessor.cpp  connectionProcessor.hpp  eventLoop.cpp  eventLoop.hpp  file.hpp  idAssigner.hpp  main.cpp  namedPipe.cpp  namedPipe.hpp  networkSocket.hpp  room.cpp  room.hpp  roomManager.cpp  roomManager.hpp  router.hpp  server.cpp  stream.hpp  utils.hpp  worker.cpp  worker.hpp  workerManager.cpp  workerManager.hpp
src/Server/http/: HttpMessage.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp
src/Server/managers/: clientManager.hpp  idAssigner.hpp  roomManager.cpp  roomManager.hpp  workerManager.cpp  workerManager.hpp
src/Server/routing/: routeHandlers.hpp  router.hpp  urls.hpp
src/Server/streams/: asyncInputStream.cpp  asyncInputStream.hpp  asyncOutputStream.cpp  asyncOutputStream.hpp
src/Worker/: main.cpp
